fixed position bugs on mobile device

--- a/master.css
+++ b/master.css
@@ -67,7 +67,7 @@
 		    opacity: 0;
 		    width: 100%;
 		    height: 100%;
-		    transform: translate(0,-50%);
+		    transform: translate(-50%,-50%);
 		}
 
 		.card .text div{
@@ -96,7 +96,7 @@
 
 		.card.done .text:hover + .preview{
 			filter:blur(3px);
-			transform: translate(0,-50%) scale(1.2);
+			transform: translate(-50%,-50%) scale(1.2);
 			opacity:0.5;
 		}
 
